Sectors ID are now visible and placed in the correct sector (not yet centered

--- a/mapGrid/style.css
+++ b/mapGrid/style.css
@@ -29,3 +29,9 @@ html, body {
    height:250px;
    overflow:scroll
 }
+
+.customBox {
+      background: transparent;
+      border: hidden;
+      position: absolute;
+}
